--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^3.4.1",
+    "firebase": "^9.0.2",
     "phaser": "^3.19.0"
   }
 }
